--- a/index.html
+++ b/index.html
@@ -2,84 +2,43 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>FIMA - Forum International de la Mode Africaine</title>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FIMA - Festival International de la Mode Africaine</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@300;500&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header>
-    <div class="container">
-      <h1>FIMA</h1>
-      <nav>
-        <ul>
-          <li><a href="#presentation">Présentation</a></li>
-          <li><a href="#programme">Programme</a></li>
-          <li><a href="#designers">Designers</a></li>
-          <li><a href="#billetterie">Billetterie</a></li>
-          <li><a href="#replays">Replays</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-  <div class="hero">
-    <div class="overlay">
-      <h2>Festival International de la Mode Africaine</h2>
-      <p>Un événement culturel majeur, fondé par Alphadi</p>
-    </div>
-  </div>
-  <section class="section" id="presentation">
-    <h2>Présentation</h2>
-    <p>Le FIMA est un événement phare de la mode africaine, initié par Alphadi, qui réunit créateurs, artistes et cultures du monde entier autour d’une même passion pour l’Afrique, l’innovation et la tradition. Depuis sa création, il promeut la paix, l’entrepreneuriat et l’émancipation des jeunes talents.</p>
-  </section>
-  <section class="section" id="programme">
-    <h2>Programme</h2>
-    <p>Du 10 au 13 décembre : défilés, expositions, concerts, workshops et rencontres professionnelles à ne pas manquer.</p>
-  </section>
-  <section class="section" id="designers">
-    <h2>Designers & Artistes</h2>
-    <div class="grid">
-      <div class="card">
-        <img src="images/alphadi.jpg" alt="Alphadi" />
-        <h3>Alphadi</h3>
-        <p>Fondateur du FIMA, créateur emblématique de la mode africaine.</p>
-      </div>
-      <div class="card">
-        <img src="images/designer1.jpg" alt="Designer invité" />
-        <h3>Fatima Lopez</h3>
-        <p>Styliste sénégalaise, entre tradition et modernité.</p>
-      </div>
-    </div>
-  </section>
-  <section class="section" id="billetterie">
-    <h2>Billetterie</h2>
-    <form>
-      <label for="nom">Nom</label><input type="text" id="nom" name="nom" />
-      <label for="email">Email</label><input type="email" id="email" name="email" />
-      <label for="type">Type de billet</label>
-      <select id="type" name="type">
-        <option>Pass Journée</option>
-        <option>Pass 4 jours</option>
-      </select>
-      <button type="submit">Réserver</button>
-    </form>
-  </section>
-  <section class="section" id="replays">
-    <h2>Replays</h2>
-    <div class="video-container">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/YOUTUBE_ID" frameborder="0" allowfullscreen></iframe>
-    </div>
-  </section>
-  <section class="section" id="contact">
-    <h2>Contact</h2>
-    <p>Email : contact@fima-africa.org</p>
-    <div class="insta-grid">
-      <iframe src="https://www.instagram.com/fimaafrica/embed" width="320" height="440" frameborder="0"></iframe>
-    </div>
-  </section>
-  <footer>
-    <p>&copy; 2025 FIMA - Tous droits réservés</p>
-  </footer>
+    <header>
+        <div class="container">
+            <h1>FIMA</h1>
+            <nav>
+                <a href="#">Accueil</a>
+                <a href="#">Designers</a>
+                <a href="#">Artistes</a>
+                <a href="#">Billetterie</a>
+                <a href="#">À propos</a>
+            </nav>
+        </div>
+    </header>
+    <section class="hero">
+        <div class="overlay">
+            <div class="hero-text">
+                <h2>Festival International de la Mode Africaine</h2>
+                <p>Mode, culture et élégance au cœur de l'Afrique</p>
+            </div>
+        </div>
+    </section>
+    <section class="intro">
+        <div class="container">
+            <h3>Édition 2025</h3>
+            <p>Rejoignez-nous pour une expérience unique entre tradition et modernité, portée par la vision du créateur de renom Alphadi.</p>
+        </div>
+    </section>
+    <footer>
+        <div class="container">
+            <p>&copy; 2025 FIMA. Tous droits réservés.</p>
+        </div>
+    </footer>
 </body>
 </html>
