--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -42,3 +41,95 @@
     </footer>
 </body>
 </html>
+"""
+
+# CSS chic et épuré
+style_css = """
+body {
+    margin: 0;
+    font-family: 'Inter', sans-serif;
+    color: #111;
+    background-color: #fff;
+}
+
+header {
+    background: white;
+    padding: 20px 0;
+    border-bottom: 1px solid #ddd;
+}
+
+header .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+header h1 {
+    font-family: 'Playfair Display', serif;
+    font-size: 28px;
+    margin: 0;
+}
+
+nav a {
+    margin-left: 20px;
+    text-decoration: none;
+    color: #111;
+    font-weight: 500;
+    transition: color 0.3s ease;
+}
+
+nav a:hover {
+    color: #aa3d00;
+}
+
+.hero {
+    height: 90vh;
+    background: url('https://images.unsplash.com/photo-1606811858624-f754c914c68f?ixlib=rb-4.0.3&auto=format&fit=crop&w=1470&q=80') no-repeat center center/cover;
+    position: relative;
+}
+
+.overlay {
+    background: rgba(0, 0, 0, 0.4);
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.hero-text {
+    color: white;
+    text-align: center;
+}
+
+.hero-text h2 {
+    font-size: 42px;
+    font-family: 'Playfair Display', serif;
+    margin: 0;
+}
+
+.hero-text p {
+    font-size: 20px;
+    font-weight: 300;
+}
+
+.intro {
+    padding: 60px 20px;
+    background-color: #f8f8f8;
+}
+
+.intro .container {
+    max-width: 800px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+footer {
+    background-color: #111;
+    color: white;
+    text-align: center;
+    padding: 20px 0;
+}
+
