--- a/index.html
+++ b/index.html
@@ -1,135 +1,75 @@
+
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FIMA - Festival International de la Mode Africaine</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@300;500&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>FIMA - Festival International de la Mode Africaine</title>
+  <link rel="stylesheet" href="style.css"/>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@300;500&display=swap" rel="stylesheet"/>
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1>FIMA</h1>
-            <nav>
-                <a href="#">Accueil</a>
-                <a href="#">Designers</a>
-                <a href="#">Artistes</a>
-                <a href="#">Billetterie</a>
-                <a href="#">À propos</a>
-            </nav>
-        </div>
-    </header>
-    <section class="hero">
-        <div class="overlay">
-            <div class="hero-text">
-                <h2>Festival International de la Mode Africaine</h2>
-                <p>Mode, culture et élégance au cœur de l'Afrique</p>
-            </div>
-        </div>
-    </section>
-    <section class="intro">
-        <div class="container">
-            <h3>Édition 2025</h3>
-            <p>Rejoignez-nous pour une expérience unique entre tradition et modernité, portée par la vision du créateur de renom Alphadi.</p>
-        </div>
-    </section>
-    <footer>
-        <div class="container">
-            <p>&copy; 2025 FIMA. Tous droits réservés.</p>
-        </div>
-    </footer>
+  <header>
+    <div class="container">
+      <h1>FIMA</h1>
+      <nav>
+        <a href="#designers">Designers</a>
+        <a href="#artistes">Artistes</a>
+        <a href="#concours">Concours</a>
+        <a href="#billetterie">Billetterie</a>
+        <a href="#apropos">À propos</a>
+      </nav>
+    </div>
+  </header>
+
+  <section class="hero">
+    <div class="overlay">
+      <div class="hero-text">
+        <h2>Festival International de la Mode Africaine</h2>
+        <p>Mode, culture et élégance au cœur de l'Afrique</p>
+      </div>
+    </div>
+  </section>
+
+  <section id="designers" class="content-section">
+    <div class="container">
+      <h3>Les Designers</h3>
+      <p>FIMA accueille les plus grands noms de la mode africaine et internationale. Découvrez les créateurs emblématiques ainsi que les talents émergents qui font rayonner le continent à travers leurs collections audacieuses.</p>
+    </div>
+  </section>
+
+  <section id="artistes" class="content-section alt">
+    <div class="container">
+      <h3>Les Artistes</h3>
+      <p>Musiciens, performers, plasticiens... le FIMA donne la parole aux artistes pour faire vibrer les scènes du festival. Une programmation éclectique qui relie tradition, modernité et expression libre.</p>
+    </div>
+  </section>
+
+  <section id="concours" class="content-section">
+    <div class="container">
+      <h3>Concours de Jeunes Créateurs</h3>
+      <p>Le FIMA soutient la relève à travers son concours emblématique. Chaque année, de jeunes stylistes venus de toute l’Afrique viennent présenter leur vision et concourent pour une reconnaissance internationale.</p>
+    </div>
+  </section>
+
+  <section id="billetterie" class="content-section alt">
+    <div class="container">
+      <h3>Billetterie</h3>
+      <p>Réservez votre place pour vivre une expérience unique. Plusieurs options disponibles : Pass Journée, Pass Festival, Accès VIP. Bientôt disponible ici !</p>
+    </div>
+  </section>
+
+  <section id="apropos" class="content-section">
+    <div class="container">
+      <h3>À propos du FIMA</h3>
+      <p>Créé en 1998 par le styliste Alphadi, le FIMA est une plateforme culturelle panafricaine majeure, mettant à l’honneur la paix, la jeunesse et la créativité à travers la mode et les arts.</p>
+    </div>
+  </section>
+
+  <footer>
+    <div class="container">
+      <p>&copy; 2025 FIMA. Tous droits réservés.</p>
+    </div>
+  </footer>
 </body>
 </html>
-"""
-
-# CSS chic et épuré
-style_css = """
-body {
-    margin: 0;
-    font-family: 'Inter', sans-serif;
-    color: #111;
-    background-color: #fff;
-}
-
-header {
-    background: white;
-    padding: 20px 0;
-    border-bottom: 1px solid #ddd;
-}
-
-header .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    max-width: 1100px;
-    margin: 0 auto;
-    padding: 0 20px;
-}
-
-header h1 {
-    font-family: 'Playfair Display', serif;
-    font-size: 28px;
-    margin: 0;
-}
-
-nav a {
-    margin-left: 20px;
-    text-decoration: none;
-    color: #111;
-    font-weight: 500;
-    transition: color 0.3s ease;
-}
-
-nav a:hover {
-    color: #aa3d00;
-}
-
-.hero {
-    height: 90vh;
-    background: url('https://images.unsplash.com/photo-1606811858624-f754c914c68f?ixlib=rb-4.0.3&auto=format&fit=crop&w=1470&q=80') no-repeat center center/cover;
-    position: relative;
-}
-
-.overlay {
-    background: rgba(0, 0, 0, 0.4);
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.hero-text {
-    color: white;
-    text-align: center;
-}
-
-.hero-text h2 {
-    font-size: 42px;
-    font-family: 'Playfair Display', serif;
-    margin: 0;
-}
-
-.hero-text p {
-    font-size: 20px;
-    font-weight: 300;
-}
-
-.intro {
-    padding: 60px 20px;
-    background-color: #f8f8f8;
-}
-
-.intro .container {
-    max-width: 800px;
-    margin: 0 auto;
-    text-align: center;
-}
-
-footer {
-    background-color: #111;
-    color: white;
-    text-align: center;
-    padding: 20px 0;
-}
-
