--- a/histoire.html
+++ b/histoire.html
@@ -1,75 +1,34 @@
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>FIMA - Festival International de la Mode Africaine</title>
-  <link rel="stylesheet" href="style.css"/>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@300;500&display=swap" rel="stylesheet"/>
+  <title>Histoire du FIMA</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <div class="container">
       <h1>FIMA</h1>
       <nav>
-        <a href="#designers">Designers</a>
-        <a href="#artistes">Artistes</a>
-        <a href="#concours">Concours</a>
-        <a href="#billetterie">Billetterie</a>
-        <a href="#apropos">À propos</a>
+        <ul>
+          <li><a href="index.html">Accueil</a></li>
+          <li><a href="histoire.html">Histoire</a></li>
+          <li><a href="alphadi.html">Alphadi</a></li>
+        </ul>
       </nav>
     </div>
   </header>
 
-  <section class="hero">
-    <div class="overlay">
-      <div class="hero-text">
-        <h2>Festival International de la Mode Africaine</h2>
-        <p>Mode, culture et élégance au cœur de l'Afrique</p>
-      </div>
-    </div>
-  </section>
-
-  <section id="designers" class="content-section">
-    <div class="container">
-      <h3>Les Designers</h3>
-      <p>FIMA accueille les plus grands noms de la mode africaine et internationale. Découvrez les créateurs emblématiques ainsi que les talents émergents qui font rayonner le continent à travers leurs collections audacieuses.</p>
-    </div>
-  </section>
-
-  <section id="artistes" class="content-section alt">
-    <div class="container">
-      <h3>Les Artistes</h3>
-      <p>Musiciens, performers, plasticiens... le FIMA donne la parole aux artistes pour faire vibrer les scènes du festival. Une programmation éclectique qui relie tradition, modernité et expression libre.</p>
-    </div>
-  </section>
-
-  <section id="concours" class="content-section">
-    <div class="container">
-      <h3>Concours de Jeunes Créateurs</h3>
-      <p>Le FIMA soutient la relève à travers son concours emblématique. Chaque année, de jeunes stylistes venus de toute l’Afrique viennent présenter leur vision et concourent pour une reconnaissance internationale.</p>
-    </div>
-  </section>
-
-  <section id="billetterie" class="content-section alt">
-    <div class="container">
-      <h3>Billetterie</h3>
-      <p>Réservez votre place pour vivre une expérience unique. Plusieurs options disponibles : Pass Journée, Pass Festival, Accès VIP. Bientôt disponible ici !</p>
-    </div>
-  </section>
-
-  <section id="apropos" class="content-section">
-    <div class="container">
-      <h3>À propos du FIMA</h3>
-      <p>Créé en 1998 par le styliste Alphadi, le FIMA est une plateforme culturelle panafricaine majeure, mettant à l’honneur la paix, la jeunesse et la créativité à travers la mode et les arts.</p>
-    </div>
+  <section class="section">
+    <h2>Une épopée culturelle dans le désert</h2>
+    <p>Le FIMA – Forum International de la Mode Africaine – est bien plus qu’un événement de mode. Né en 1998 dans le désert du Niger, il incarne un rêve audacieux : faire du Sahara un podium, un lieu de dialogue des cultures, un symbole de paix par la création artistique.</p>
+    <p>Fondé par le designer visionnaire Alphadi, le FIMA a su rassembler, année après année, les plus grands noms de la mode, de la musique, de l’art et de la diplomatie, pour célébrer l’excellence africaine sur la scène internationale.</p>
+    <p>Chaque édition a accueilli créateurs de renom, jeunes talents émergents, chefs coutumiers, chefs d’État, artisans du monde entier, artistes et intellectuels. Plus qu’un simple défilé, le FIMA est devenu un carrefour d’inspiration et d’engagement pour une Afrique qui rayonne.</p>
+    <p>Installé au cœur du désert de Tiguidit, puis déployé dans d’autres régions du Niger et d’Afrique, le FIMA porte un message fort : la beauté est un vecteur de développement, et la mode peut contribuer à la paix durable.</p>
   </section>
 
   <footer>
-    <div class="container">
-      <p>&copy; 2025 FIMA. Tous droits réservés.</p>
-    </div>
+    <p>&copy; 2025 FIMA - Tous droits réservés.</p>
   </footer>
 </body>
 </html>
