--- a/fondateur.html
+++ b/fondateur.html
@@ -1,75 +1,34 @@
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>FIMA - Festival International de la Mode Africaine</title>
-  <link rel="stylesheet" href="style.css"/>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@300;500&display=swap" rel="stylesheet"/>
+  <title>Alphadi - Le Magicien du Désert</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <div class="container">
       <h1>FIMA</h1>
       <nav>
-        <a href="#designers">Designers</a>
-        <a href="#artistes">Artistes</a>
-        <a href="#concours">Concours</a>
-        <a href="#billetterie">Billetterie</a>
-        <a href="#apropos">À propos</a>
+        <ul>
+          <li><a href="index.html">Accueil</a></li>
+          <li><a href="histoire.html">Histoire</a></li>
+          <li><a href="alphadi.html">Alphadi</a></li>
+        </ul>
       </nav>
     </div>
   </header>
 
-  <section class="hero">
-    <div class="overlay">
-      <div class="hero-text">
-        <h2>Festival International de la Mode Africaine</h2>
-        <p>Mode, culture et élégance au cœur de l'Afrique</p>
-      </div>
-    </div>
-  </section>
-
-  <section id="designers" class="content-section">
-    <div class="container">
-      <h3>Les Designers</h3>
-      <p>FIMA accueille les plus grands noms de la mode africaine et internationale. Découvrez les créateurs emblématiques ainsi que les talents émergents qui font rayonner le continent à travers leurs collections audacieuses.</p>
-    </div>
-  </section>
-
-  <section id="artistes" class="content-section alt">
-    <div class="container">
-      <h3>Les Artistes</h3>
-      <p>Musiciens, performers, plasticiens... le FIMA donne la parole aux artistes pour faire vibrer les scènes du festival. Une programmation éclectique qui relie tradition, modernité et expression libre.</p>
-    </div>
-  </section>
-
-  <section id="concours" class="content-section">
-    <div class="container">
-      <h3>Concours de Jeunes Créateurs</h3>
-      <p>Le FIMA soutient la relève à travers son concours emblématique. Chaque année, de jeunes stylistes venus de toute l’Afrique viennent présenter leur vision et concourent pour une reconnaissance internationale.</p>
-    </div>
-  </section>
-
-  <section id="billetterie" class="content-section alt">
-    <div class="container">
-      <h3>Billetterie</h3>
-      <p>Réservez votre place pour vivre une expérience unique. Plusieurs options disponibles : Pass Journée, Pass Festival, Accès VIP. Bientôt disponible ici !</p>
-    </div>
-  </section>
-
-  <section id="apropos" class="content-section">
-    <div class="container">
-      <h3>À propos du FIMA</h3>
-      <p>Créé en 1998 par le styliste Alphadi, le FIMA est une plateforme culturelle panafricaine majeure, mettant à l’honneur la paix, la jeunesse et la créativité à travers la mode et les arts.</p>
-    </div>
+  <section class="section">
+    <h2>Alphadi, un créateur hors du temps</h2>
+    <p>Sidahmed Seidnaly, connu sous le nom d’Alphadi, est une figure emblématique de la mode africaine et internationale. Né au Niger en 1957, il est à la fois styliste, entrepreneur, militant culturel et visionnaire panafricain.</p>
+    <p>Formé à Paris, il fonde sa marque "Alphadi" en 1984, fusionnant tissus traditionnels africains et lignes contemporaines. Son style élégant et engagé le propulse sur les scènes internationales, de la Paris Fashion Week aux podiums de New York, en passant par Bamako, Tunis, Tokyo ou Abidjan.</p>
+    <p>En 1998, il crée le FIMA dans les sables du Sahara, avec un rêve fou : faire dialoguer les cultures au cœur du désert, en érigeant la mode comme levier de paix. Depuis, il n’a cessé de promouvoir les talents africains tout en défendant la liberté d’expression, la tolérance et la paix.</p>
+    <p>Membre de l’UNESCO pour la paix, primé dans de nombreux pays, Alphadi reste fidèle à ses racines touarègues et à sa mission : faire rayonner l’Afrique par la création, la beauté et la transmission.</p>
   </section>
 
   <footer>
-    <div class="container">
-      <p>&copy; 2025 FIMA. Tous droits réservés.</p>
-    </div>
+    <p>&copy; 2025 FIMA - Tous droits réservés.</p>
   </footer>
 </body>
 </html>
