--- a/apropos.html
+++ b/apropos.html
@@ -1,75 +1,52 @@
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>FIMA - Festival International de la Mode Africaine</title>
-  <link rel="stylesheet" href="style.css"/>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@300;500&display=swap" rel="stylesheet"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>À propos - FIMA</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <div class="container">
       <h1>FIMA</h1>
       <nav>
-        <a href="#designers">Designers</a>
-        <a href="#artistes">Artistes</a>
-        <a href="#concours">Concours</a>
-        <a href="#billetterie">Billetterie</a>
-        <a href="#apropos">À propos</a>
+        <ul>
+          <li><a href="index.html">Accueil</a></li>
+          <li><a href="designers.html">Designers</a></li>
+          <li><a href="artistes.html">Artistes</a></li>
+          <li><a href="concours.html">Concours</a></li>
+          <li><a href="billetterie.html">Billetterie</a></li>
+          <li><a href="apropos.html" class="active">À propos</a></li>
+          <li><a href="alphadi.html">Alphadi</a></li>
+        </ul>
       </nav>
     </div>
   </header>
 
-  <section class="hero">
-    <div class="overlay">
-      <div class="hero-text">
-        <h2>Festival International de la Mode Africaine</h2>
-        <p>Mode, culture et élégance au cœur de l'Afrique</p>
-      </div>
-    </div>
-  </section>
+  <main class="section">
+    <h2>À propos du FIMA</h2>
+    <p>Le Forum International de la Mode Africaine (FIMA) a été fondé en 1998 par Alphadi, couturier nigérien de renommée internationale. L’événement se veut une vitrine mondiale pour les créateurs africains et une plateforme de dialogue culturel et artistique.</p>
 
-  <section id="designers" class="content-section">
-    <div class="container">
-      <h3>Les Designers</h3>
-      <p>FIMA accueille les plus grands noms de la mode africaine et internationale. Découvrez les créateurs emblématiques ainsi que les talents émergents qui font rayonner le continent à travers leurs collections audacieuses.</p>
-    </div>
-  </section>
+    <h3>Nos objectifs</h3>
+    <ul>
+      <li>✨ Promouvoir la mode et les arts africains</li>
+      <li>🕊️ Favoriser la paix et la coopération culturelle</li>
+      <li>🎓 Soutenir la formation des jeunes créateurs</li>
+      <li>🌍 Positionner l’Afrique sur la scène internationale</li>
+    </ul>
 
-  <section id="artistes" class="content-section alt">
-    <div class="container">
-      <h3>Les Artistes</h3>
-      <p>Musiciens, performers, plasticiens... le FIMA donne la parole aux artistes pour faire vibrer les scènes du festival. Une programmation éclectique qui relie tradition, modernité et expression libre.</p>
-    </div>
-  </section>
-
-  <section id="concours" class="content-section">
-    <div class="container">
-      <h3>Concours de Jeunes Créateurs</h3>
-      <p>Le FIMA soutient la relève à travers son concours emblématique. Chaque année, de jeunes stylistes venus de toute l’Afrique viennent présenter leur vision et concourent pour une reconnaissance internationale.</p>
-    </div>
-  </section>
-
-  <section id="billetterie" class="content-section alt">
-    <div class="container">
-      <h3>Billetterie</h3>
-      <p>Réservez votre place pour vivre une expérience unique. Plusieurs options disponibles : Pass Journée, Pass Festival, Accès VIP. Bientôt disponible ici !</p>
-    </div>
-  </section>
-
-  <section id="apropos" class="content-section">
-    <div class="container">
-      <h3>À propos du FIMA</h3>
-      <p>Créé en 1998 par le styliste Alphadi, le FIMA est une plateforme culturelle panafricaine majeure, mettant à l’honneur la paix, la jeunesse et la créativité à travers la mode et les arts.</p>
-    </div>
-  </section>
+    <h3>Partenaires</h3>
+    <ul>
+      <li>UNESCO</li>
+      <li>Union Africaine</li>
+      <li>IFM Paris</li>
+      <li>Fondation Alphadi</li>
+    </ul>
+  </main>
 
   <footer>
-    <div class="container">
-      <p>&copy; 2025 FIMA. Tous droits réservés.</p>
-    </div>
+    <p>&copy; 2025 FIMA - Tous droits réservés.</p>
   </footer>
 </body>
 </html>
