--- a/index.html
+++ b/index.html
@@ -1,75 +1,50 @@
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FIMA - Festival International de la Mode Africaine</title>
-  <link rel="stylesheet" href="style.css"/>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@300;500&display=swap" rel="stylesheet"/>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <div class="container">
       <h1>FIMA</h1>
       <nav>
-        <a href="#designers">Designers</a>
-        <a href="#artistes">Artistes</a>
-        <a href="#concours">Concours</a>
-        <a href="#billetterie">Billetterie</a>
-        <a href="#apropos">À propos</a>
+        <ul>
+          <li><a href="index.html" class="active">Accueil</a></li>
+          <li><a href="designers.html">Designers</a></li>
+          <li><a href="artistes.html">Artistes</a></li>
+          <li><a href="concours.html">Concours</a></li>
+          <li><a href="billetterie.html">Billetterie</a></li>
+          <li><a href="apropos.html">À propos</a></li>
+          <li><a href="alphadi.html">Alphadi</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
       </nav>
     </div>
   </header>
 
-  <section class="hero">
-    <div class="overlay">
-      <div class="hero-text">
-        <h2>Festival International de la Mode Africaine</h2>
-        <p>Mode, culture et élégance au cœur de l'Afrique</p>
-      </div>
+  <main class="hero">
+    <div class="hero-image">
+      <img src="images/imageFima1.png" alt="FIMA Accueil">
     </div>
-  </section>
-
-  <section id="designers" class="content-section">
-    <div class="container">
-      <h3>Les Designers</h3>
-      <p>FIMA accueille les plus grands noms de la mode africaine et internationale. Découvrez les créateurs emblématiques ainsi que les talents émergents qui font rayonner le continent à travers leurs collections audacieuses.</p>
+    <div class="hero-content">
+      <h2>Festival International de la Mode Africaine</h2>
+      <p>Un rendez-vous incontournable de la créativité africaine fondé par le célèbre styliste Alphadi. Découvrez les plus grands créateurs, les artistes émergents et l’esprit du luxe afro-chic.</p>
+      <a href="billetterie.html" class="button">Réservez vos places</a>
     </div>
-  </section>
+  </main>
 
-  <section id="artistes" class="content-section alt">
+  <section class="intro">
     <div class="container">
-      <h3>Les Artistes</h3>
-      <p>Musiciens, performers, plasticiens... le FIMA donne la parole aux artistes pour faire vibrer les scènes du festival. Une programmation éclectique qui relie tradition, modernité et expression libre.</p>
-    </div>
-  </section>
-
-  <section id="concours" class="content-section">
-    <div class="container">
-      <h3>Concours de Jeunes Créateurs</h3>
-      <p>Le FIMA soutient la relève à travers son concours emblématique. Chaque année, de jeunes stylistes venus de toute l’Afrique viennent présenter leur vision et concourent pour une reconnaissance internationale.</p>
-    </div>
-  </section>
-
-  <section id="billetterie" class="content-section alt">
-    <div class="container">
-      <h3>Billetterie</h3>
-      <p>Réservez votre place pour vivre une expérience unique. Plusieurs options disponibles : Pass Journée, Pass Festival, Accès VIP. Bientôt disponible ici !</p>
-    </div>
-  </section>
-
-  <section id="apropos" class="content-section">
-    <div class="container">
-      <h3>À propos du FIMA</h3>
-      <p>Créé en 1998 par le styliste Alphadi, le FIMA est une plateforme culturelle panafricaine majeure, mettant à l’honneur la paix, la jeunesse et la créativité à travers la mode et les arts.</p>
+      <h3>Bienvenue au FIMA</h3>
+      <p>Le FIMA met en lumière le meilleur de la mode africaine, en réunissant créateurs, stylistes, artistes, musiciens, photographes et passionnés venus du monde entier. Plus qu’un défilé, c’est un mouvement culturel et une vitrine pour la paix par la créativité.</p>
     </div>
   </section>
 
   <footer>
-    <div class="container">
-      <p>&copy; 2025 FIMA. Tous droits réservés.</p>
-    </div>
+    <p>&copy; 2025 FIMA - Tous droits réservés. Conçu avec passion pour l’Afrique et ses talents.</p>
   </footer>
 </body>
 </html>
