--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,115 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact - FIMA</title>
+  <title>FIMA - Festival International de la Mode Africaine</title>
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Inter', sans-serif;
+      background-color: #fefefe;
+      color: #111;
+      line-height: 1.6;
+    }
+    header {
+      background-color: #fff;
+      border-bottom: 1px solid #eee;
+      padding: 1rem 0;
+      position: sticky;
+      top: 0;
+      z-index: 10;
+    }
+    .container {
+      width: 90%;
+      max-width: 1200px;
+      margin: 0 auto;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    h1 {
+      font-family: 'Playfair Display', serif;
+      font-size: 2rem;
+      color: #111;
+      margin: 0;
+    }
+    nav ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      display: flex;
+      gap: 1.5rem;
+    }
+    nav a {
+      text-decoration: none;
+      color: #444;
+      font-weight: 500;
+      transition: color 0.3s ease;
+    }
+    nav a:hover, nav a.active {
+      color: #000;
+    }
+    .hero {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      align-items: center;
+      padding: 4rem 0;
+      background-color: #faf9f6;
+    }
+    .hero-image img {
+      width: 100%;
+      height: auto;
+      border-radius: 1rem;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+    }
+    .hero-content {
+      padding: 2rem;
+    }
+    .hero-content h2 {
+      font-family: 'Playfair Display', serif;
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
+    }
+    .hero-content p {
+      font-size: 1.1rem;
+      margin-bottom: 1.5rem;
+    }
+    .button {
+      background-color: #000;
+      color: #fff;
+      padding: 0.75rem 1.5rem;
+      border-radius: 2rem;
+      text-decoration: none;
+      font-weight: bold;
+      transition: background-color 0.3s ease;
+    }
+    .button:hover {
+      background-color: #333;
+    }
+    .intro {
+      padding: 4rem 0;
+      background-color: #fff;
+    }
+    .intro h3 {
+      font-family: 'Playfair Display', serif;
+      font-size: 2rem;
+      margin-bottom: 1rem;
+      text-align: center;
+    }
+    .intro p {
+      max-width: 800px;
+      margin: 0 auto;
+      text-align: center;
+    }
+    footer {
+      background-color: #111;
+      color: #fff;
+      padding: 1rem 0;
+      text-align: center;
+      font-size: 0.9rem;
+    }
+  </style>
 </head>
 <body>
   <header>
@@ -12,41 +119,39 @@
       <h1>FIMA</h1>
       <nav>
         <ul>
-          <li><a href="index.html">Accueil</a></li>
+          <li><a href="index.html" class="active">Accueil</a></li>
           <li><a href="designers.html">Designers</a></li>
           <li><a href="artistes.html">Artistes</a></li>
           <li><a href="concours.html">Concours</a></li>
           <li><a href="billetterie.html">Billetterie</a></li>
           <li><a href="apropos.html">À propos</a></li>
           <li><a href="alphadi.html">Alphadi</a></li>
-          <li><a href="contact.html" class="active">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
-  <main class="section">
-    <h2>Contactez-nous</h2>
-    <p>Pour toute question concernant le FIMA, les accréditations presse, les partenariats ou les opportunités de participation, veuillez nous contacter via le formulaire ci-dessous ou par email.</p>
-
-    <form action="#" method="POST" class="contact-form">
-      <label for="nom">Nom</label>
-      <input type="text" id="nom" name="nom" required>
-
-      <label for="email">Email</label>
-      <input type="email" id="email" name="email" required>
-
-      <label for="message">Message</label>
-      <textarea id="message" name="message" rows="6" required></textarea>
-
-      <button type="submit">Envoyer</button>
-    </form>
-
-    <p>Email direct : <a href="mailto:contact@fima.africa">contact@fima.africa</a></p>
+  <main class="hero">
+    <div class="hero-image">
+      <img src="images/imageFima1.png" alt="FIMA Accueil">
+    </div>
+    <div class="hero-content">
+      <h2>Festival International de la Mode Africaine</h2>
+      <p>Un rendez-vous incontournable de la créativité africaine fondé par le célèbre styliste Alphadi. Découvrez les plus grands créateurs, les artistes émergents et l’esprit du luxe afro-chic.</p>
+      <a href="billetterie.html" class="button">Réservez vos places</a>
+    </div>
   </main>
 
+  <section class="intro">
+    <div class="container">
+      <h3>Bienvenue au FIMA</h3>
+      <p>Le FIMA met en lumière le meilleur de la mode africaine, en réunissant créateurs, stylistes, artistes, musiciens, photographes et passionnés venus du monde entier. Plus qu’un défilé, c’est un mouvement culturel et une vitrine pour la paix par la créativité.</p>
+    </div>
+  </section>
+
   <footer>
-    <p>&copy; 2025 FIMA - Tous droits réservés.</p>
+    <p>&copy; 2025 FIMA - Tous droits réservés. Conçu avec passion pour l’Afrique et ses talents.</p>
   </footer>
 </body>
 </html>
