--- a/index.html
+++ b/index.html
@@ -110,7 +110,22 @@
   </header>
 
   <main role=\"main\">
-    <section class=\"hero-video\" aria-label=\"Vidéo du Festival International de la Mode Africaine en background\">
+   <section class="hero-video" aria-label="Vidéo du Festival International de la Mode Africaine en background" style="position: relative; height: 70vh; overflow: hidden;">
+  <iframe
+    src="https://www.youtube.com/embed/Ww8magjkEfQ?autoplay=1&mute=1&loop=1&playlist=Ww8magjkEfQ&controls=0&showinfo=0&rel=0&modestbranding=1"
+    title="Vidéo FIMA"
+    frameborder="0"
+    allow="autoplay; fullscreen"
+    allowfullscreen
+    style="position: absolute; top: 50%; left: 50%; width: 177.78vh; height: 100vh; transform: translate(-50%, -50%); pointer-events: none; z-index: -1;">
+  </iframe>
+  <div style="position: relative; z-index: 1; max-width: 700px; margin: 0 auto; padding: 6rem 1rem; color: #fff; text-align: center; background: rgba(0, 0, 0, 0.4); border-radius: 1rem;">
+    <h2 style="font-family: 'Playfair Display', serif; font-weight: 700; font-size: 3rem; margin-bottom: 1rem;">Festival International de la Mode Africaine</h2>
+    <p style="font-size: 1.3rem; margin-bottom: 2rem;">Un rendez-vous incontournable de la créativité africaine fondé par le célèbre styliste Alphadi. Découvrez les plus grands créateurs, les artistes émergents et l’esprit du luxe afro-chic.</p>
+    <a href="billetterie.html" class="button" style="background-color: #fff; color: #111; padding: 1rem 2.5rem; border-radius: 50px; font-weight: 700; font-size: 1rem; text-decoration: none; box-shadow: 0 5px 15px rgba(0,0,0,0.2); transition: background-color 0.3s ease;">Réservez vos places</a>
+  </div>
+</section>
+
       <video autoplay muted loop playsinline>
         <source src=\"videos/fima-promo.mp4\" type=\"video/mp4\" />
         <!-- Fallback -->
