--- a/billeterie.html
+++ b/billeterie.html
@@ -1,10 +1,81 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Billetterie - FIMA</title>
-  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet" />
+  <style>
+    body {
+      margin: 0; font-family: 'Inter', sans-serif; background: #fff; color: #111;
+    }
+    header {
+      position: sticky; top: 0; background: #fff; box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+      z-index: 1000;
+    }
+    .container {
+      max-width: 1200px; margin: 0 auto; padding: 0 1rem;
+      display: flex; align-items: center; justify-content: space-between; height: 60px;
+    }
+    h1 {
+      font-family: 'Playfair Display', serif; font-weight: 700; font-size: 1.8rem; margin: 0; color: #111;
+    }
+    nav ul {
+      list-style: none; display: flex; gap: 1.5rem; margin: 0; padding: 0;
+    }
+    nav a {
+      font-weight: 600; font-size: 1rem; padding: 0.5rem 0; color: #555;
+      border-bottom: 3px solid transparent; transition: border-color 0.3s, color 0.3s;
+    }
+    nav a:hover, nav a.active {
+      color: #000; border-bottom-color: #000;
+    }
+    main {
+      max-width: 600px; margin: 4rem auto; padding: 0 1rem;
+    }
+    h2 {
+      font-family: 'Playfair Display', serif; font-weight: 700; font-size: 2.5rem; margin-bottom: 2rem; text-align: center;
+    }
+    form {
+      display: flex; flex-direction: column; gap: 1.25rem;
+      background: #fafafa; padding: 2rem; border-radius: 1rem;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.05);
+    }
+    label {
+      font-weight: 600; color: #222;
+    }
+    input, select {
+      padding: 0.75rem 1rem;
+      border-radius: 0.5rem;
+      border: 1px solid #ccc;
+      font-size: 1rem;
+      transition: border-color 0.3s;
+    }
+    input:focus, select:focus {
+      outline: none;
+      border-color: #000;
+    }
+    button {
+      background-color: #000;
+      color: #fff;
+      font-weight: 700;
+      padding: 1rem;
+      border: none;
+      border-radius: 50px;
+      font-size: 1.1rem;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+    button:hover {
+      background-color: #444;
+    }
+    .info-text {
+      font-size: 0.9rem;
+      color: #666;
+      margin-top: -1rem;
+      margin-bottom: 1rem;
+    }
+  </style>
 </head>
 <body>
   <header>
@@ -19,41 +90,45 @@
           <li><a href="billetterie.html" class="active">Billetterie</a></li>
           <li><a href="apropos.html">À propos</a></li>
           <li><a href="alphadi.html">Alphadi</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </div>
   </header>
+  <main>
+    <h2>Réservez vos places pour le FIMA</h2>
+    <form id="bookingForm" action="#" method="POST">
+      <label for="fullname">Nom complet</label>
+      <input type="text" id="fullname" name="fullname" placeholder="Votre nom complet" required />
 
-  <main class="section">
-    <h2>Réservez vos billets pour le FIMA 2025</h2>
-    <p>Assistez à un événement unique où la mode, l'art et la culture africaine s'entremêlent. Choisissez votre pass ci-dessous :</p>
+      <label for="email">Adresse e-mail</label>
+      <input type="email" id="email" name="email" placeholder="exemple@mail.com" required />
 
-    <div class="ticket-options">
-      <div class="ticket">
-        <h3>🎟️ Pass Journée</h3>
-        <p>Accès à tous les défilés et expositions pendant une journée.</p>
-        <p><strong>Prix : 40€</strong></p>
-        <button>Réserver</button>
-      </div>
-      <div class="ticket">
-        <h3>🎟️ Pass Week-End</h3>
-        <p>Accès complet à tous les événements du samedi et dimanche.</p>
-        <p><strong>Prix : 70€</strong></p>
-        <button>Réserver</button>
-      </div>
-      <div class="ticket">
-        <h3>🎟️ Pass Premium</h3>
-        <p>Accès VIP, rencontres avec les créateurs, place réservée aux défilés.</p>
-        <p><strong>Prix : 120€</strong></p>
-        <button>Réserver</button>
-      </div>
-    </div>
+      <label for="ticketType">Type de billet</label>
+      <select id="ticketType" name="ticketType" required>
+        <option value="" disabled selected>Choisissez un type</option>
+        <option value="standard">Standard - 50 €</option>
+        <option value="vip">VIP - 120 €</option>
+        <option value="etudiant">Étudiant - 30 €</option>
+      </select>
 
-    <p style="margin-top:2rem">Le paiement sécurisé sera disponible via PayPal ou carte bancaire. Une fois la billetterie active, vous recevrez un e-mail de confirmation et votre e-ticket.</p>
+      <label for="quantity">Quantité</label>
+      <input type="number" id="quantity" name="quantity" min="1" max="10" value="1" required />
+
+      <p class="info-text">* Les billets sont envoyés par e-mail après paiement.</p>
+
+      <button type="submit">Réserver</button>
+    </form>
   </main>
 
-  <footer>
-    <p>&copy; 2025 FIMA - Tous droits réservés.</p>
-  </footer>
+  <script>
+    // Exemple simple de gestion de formulaire (simulation)
+    const form = document.getElementById('bookingForm');
+    form.addEventListener('submit', (e) => {
+      e.preventDefault();
+      alert('Merci pour votre réservation !\nLe paiement sera bientôt intégré.');
+      form.reset();
+    });
+  </script>
 </body>
 </html>
